--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "pong-stream",
+  "name": "pong-streaming",
   "version": "1.0.0",
-  "description": "Pong Game Streaming",
+  "description": "Pong Game Streaming for LED Display",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
+  },
+  "engines": {
+    "node": ">=18.x"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "cors": "^2.8.5"
   }
 }
